--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
       </div>
 
-      <div class="grid-container">
+      <div id="grid-container" class="grid-container">
         <div class="grid-row">
           <div class="grid-cell"></div>
           <div class="grid-cell"></div>
